fix(ASSETS-6851): The selected state of the action button does not have a sufficient contrast ratio (#251)

--- a/coral-component-select/src/styles/index.styl
+++ b/coral-component-select/src/styles/index.styl
@@ -97,5 +97,5 @@ coral-select-item {
 }
 
 .coral--light ._coral-FieldButton {
-  border-color: rgb(158, 158, 158);
+  border-color: var(--spectrum-light-textfield-border-color-accessibility);
 }
